# owera-things4linux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: flatpak.yml
build-aux/: com.owera.Things4Linux.yaml  io.github.things4linux.Things4Linux.yaml  python3-httpx.json
data/: com.owera.Things4Linux.desktop  com.owera.Things4Linux.metainfo.xml  io.github.things4linux.Things4Linux.desktop  io.github.things4linux.Things4Linux.metainfo.xml
tests/: fake_cloud.py  test_engine.py  test_serde.py  test_store.py  test_tags.py  test_views.py
things4linux/: __init__.py  __main__.py  app.py  config.py  views.py
things4linux/db/: __init__.py  models.py  schema.sql  store.py
things4linux/resources/: style.css
things4linux/sync/: __init__.py  credentials.py  engine.py  protocol.py  serde.py
things4linux/ui/: __init__.py  login.py  sidebar.py  taskdetail.py  widgets.py  window.py
tools/: record_demo.py  screenshots.py
